// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Parsing indent should break the list 1`] = `
"<ul>
  <li>item <strong>1</strong></li>
  <li>item <a href=\\"link-url\\">link</a><ul>
  <li>item 3 <code>code item</code><ul>
  <li>item 4</li>
</ul>
</li>
  <li>item 3 <code>code item</code></li>
</ul>
</li>
</ul>
"
`;

exports[`List Parsing should allow empty list item 1`] = `
"<ul>
  <li>one</li>
  <li></li>
  <li>two</li>
</ul>
"
`;

exports[`List Parsing should allow lazy unless there is two line separator 1`] = `
"<ul>
  <li>one             two three<pre><code>here
four</code></pre>
</li>
  <li>two</li>
  <li>three</li>
</ul>
"
`;

exports[`List Parsing should detect list indent 1`] = `
"<ul>
  <li>item <strong>1</strong></li>
  <li>item <a href=\\"link-url\\">link</a></li>
  <li>item 3 <code>code item</code></li>
</ul>
"
`;

exports[`List Parsing should parse a list with an empty list item 1`] = `
"<ul>
  <li>one</li>
  <li></li>
  <li>two</li>
</ul>
"
`;

exports[`List Parsing should parse a list with an empty list item 2`] = `
"<ul>
  <li></li>
  <li>one</li>
  <li>two</li>
</ul>
"
`;

exports[`List Parsing should parse a list with an empty list item 3`] = `
"<ul>
  <li>one</li>
  <li>two</li>
  <li></li>
</ul>
"
`;

exports[`List Parsing should parse a spaced list 1`] = `
"<ul>
  <li>here we go with a list item</li>
  <li>another list item is here</li>
  <li>next list item is on the fly</li>
</ul>
"
`;

exports[`List Parsing should parse the indented codeblock inside 1`] = `
"<p>To put a code block within a list item, the code block needs to be indented <em>twice</em> -- 8 spaces or two tabs:</p>
<ul>
  <li>A list item with a code block:<pre><code>&lt;code goes here&gt;
&lt;code goes here&gt;
&lt;code goes here&gt;</code></pre>
</li>
</ul>
<h3>Code Blocks</h3>
"
`;

exports[`List Parsing should tokenize a valid ordered list 1`] = `
"<ol>
  <li>item <strong>1</strong></li>
  <li>item <a href=\\"link-url\\">link</a></li>
  <li>item 3 <code>code item</code></li>
</ol>
"
`;

exports[`List Parsing should tokenize a valid un-ordered list 1`] = `
"<ul>
  <li>item <strong>1</strong></li>
  <li>item <a href=\\"link-url\\">link</a></li>
  <li>item 3 <code>code item</code></li>
</ul>
"
`;

exports[`List Parsing should tokenize list combination 1`] = `
"<ul>
  <li>one</li>
  <li>two</li>
</ul>
<ol>
  <li>one</li>
  <li>two</li>
</ol>
<ul>
  <li><input type='checkbox'>c empty</li>
  <li><input type='checkbox' checked>c checked</li>
</ul>
<ol>
  <li><input type='checkbox'>c empty</li>
  <li><input type='checkbox' checked>c checked</li>
</ol>
"
`;
